<resources>
    <!--  App Strings  -->
    <string name="app_name">Pedia</string>
    <string name="acceptance">Accept</string>
    <string name="denial">Deny</string>
    <!--  Landing Strings  -->
    <string name="hello_landing_fragment">LANDING</string>
    <string name="recycler_directions">to recycler!</string>
    <string name="newspaper_directions">Hot off the press!</string>
    <!--  Recycler Strings  -->
    <string name="recycler">RECYCLER</string>
    <string name="navigate">navigate!</string>
    <string name="item_title_placeholder">Item Title</string>
    <string name="label_item">Item</string>
    <!--    Newspaper Strings-->
    <string name="newspaper_header">You Suck!</string>
    <string name="newspaper_sub_header">Experts Agree: Suck Radiates Off Of You. </string>
    <string name="newspaper_body">But its not too late. With diligent practice even the most heinous among us can be made worthy of love. No one is beyond redemption. Have no enemies. Reclaim your soul. </string>
    <string name="country_label">country</string>
    <string name="capitol_label">capitol</string>
    <string name="region_label">region</string>

    <string name="variable_font_directions">variable fonts</string>
    <string name="metal">metal</string>
    <string name="varible_font_title">Variable Font Demos</string>
    <string name="colorfont">to color fonts</string>
    <string name="varible_demo_string">All is well that ends.</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cinzel_decorative">Cinzel Decorative</string>
    <string name="nabla">Nabla</string>
    <string name="foldit_demo">Foldit</string>
    <string name="pedia">Pedia!</string>
    <string name="nabla_demo">Nabla</string>

</resources>